--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -9,7 +9,12 @@
 
 
 .hw {
-    background-color: #cc9c00;
+    background-color: white;
+    position: absolute;
+    width: 1280px;
+    height: 373px;
+    left: 70px;
+    top: 300px;
 }
 
 .hwTitle {
@@ -22,5 +27,32 @@
     font-style: normal;
     font-weight: 600;
     font-size: 22px;
+    line-height: 27px;
     color: black;
+}
+
+.hwTitle:before {
+    content: '';
+    display: block;
+    background-color: #D9D9D9;
+    position: absolute;
+    width: 1280px;
+    height: 2px;
+    left: -69px;
+    top: -25px;
+
+    /*border: 1px solid #D9D9D9;*/
+}
+
+.hwTitle:after {
+    content: '';
+    display: block;
+    background-color: #D9D9D9;
+    position: absolute;
+    width: 1280px;
+    height: 2px;
+    left: -69px;
+    top: 53px;
+
+    /*border: 1px solid #D9D9D9;*/
 }
