--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -7,52 +7,30 @@
     top: 0px;
 }
 
+#hw1 {
+
+}
 
 .hw {
+    display: block;
+    position: relative;
+    top: 0px;
     background-color: white;
-    position: absolute;
-    width: 1280px;
-    height: 373px;
-    left: 70px;
-    top: 300px;
 }
 
 .hwTitle {
-    position: absolute;
-    width: 165px;
-    height: 27px;
-    left: 70px;
-    top: 107px;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 600;
     font-size: 22px;
     line-height: 27px;
     color: black;
+    padding: 20px 70px;
+    width: 100%;
+    border-bottom: 2px solid #D9D9D9;
+    border-top: 2px solid #D9D9D9;
+    margin-top: 10px;
 }
 
-.hwTitle:before {
-    content: '';
-    display: block;
-    background-color: #D9D9D9;
-    position: absolute;
-    width: 1280px;
-    height: 2px;
-    left: -69px;
-    top: -25px;
 
-    /*border: 1px solid #D9D9D9;*/
-}
 
-.hwTitle:after {
-    content: '';
-    display: block;
-    background-color: #D9D9D9;
-    position: absolute;
-    width: 1280px;
-    height: 2px;
-    left: -69px;
-    top: 53px;
-
-    /*border: 1px solid #D9D9D9;*/
-}
