--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -1,34 +1,26 @@
 .friendMessage {
-    position: absolute;
-    width: 575px;
-    height: 77px;
-    right: 70px;
-    top: 168px;
+    background-color: white;
+    padding: 20px 70px 20px 0;
+    border: 1px solid black;
 }
 
 .friendImageAndText {
-    position: absolute;
-    width: 575px;
-    height: 77px;
-    left: 0px;
-    top: 0px;
+    display: flex;
+    flex-direction: row-reverse;
+    border: 1px solid black;
 }
 
 .friendImageAndText img {
-    position: absolute;
     width: 48px;
-    height: 48px;
-    top: 12px;
-    right: 0px;
+    margin: 10px 10px 0 10px;
 }
 
 .friendText {
-    position: absolute;
-    width: 527px;
-    height: 60px;
-    right: 60px;
-    bottom: 17px;
-
+    width: 41%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    padding: 10px;
     border-radius: 20px;
     background: #0066CC;
     box-shadow: 0px 5px 20px rgba(29, 33, 38, 0.03), 0px 1px 2px rgba(29, 33, 38, 0.1);
@@ -38,20 +30,16 @@
     content: "";
     width: 0px;
     height: 0px;
-    position: absolute;
-    top: 40px;
-    left: 97%;
+    position: relative;
+    top: 29px;
+    left: 467px;
     border-left: 16px solid transparent;
     border-right: 16px solid transparent;
     border-bottom: 20px solid #0066CC;
 }
 
 .friendName {
-    position: absolute;
-    width: 40px;
-    height: 22px;
-    right: 12px;
-    top: 7px;
+    align-self: flex-start;
 
     font-family: 'Montserrat';
     font-style: normal;
@@ -65,11 +53,7 @@
 }
 
 .friendMessageText {
-    position: absolute;
-    width: 489px;
-    height: 20px;
-    right: 25px;
-    top: 32px;
+    align-self: flex-end;
 
     font-family: 'Montserrat';
     font-style: normal;
@@ -83,17 +67,11 @@
 }
 
 .friendTime {
-    position: absolute;
-    width: 26px;
-    height: 12px;
-    top: 65px;
-    right: 11px;
-
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 600;
     font-size: 10px;
     line-height: 12px;
-
     color: #000000;
+    padding: 5px 0 5px 20px;
 }
