--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -1,18 +1,10 @@
 .sendForm {
-    position: absolute;
-    width: 100%;
-    height: 40px;
-    left: 70px;
-    top: 408px;
+    padding: 10px;
 }
 
 .textarea {
-    position: absolute;
-    width: 976px;
-    height: 40px;
-    left: 0;
-    top: 0;
 
+    width: 60%;
     padding: 0 0 0 10px;
     background: #F5F7FB;
     box-shadow: 0 5px 20px rgba(29, 33, 38, 0.03), 0 1px 2px rgba(29, 33, 38, 0.1);
@@ -32,9 +24,7 @@
 }
 
 textarea::placeholder {
-    position: absolute;
-    top: 6px;
-    left: 24px;
+
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
@@ -43,12 +33,8 @@ textarea::placeholder {
 }
 
 .button {
-    position: absolute;
-    width: 120px;
-    height: 40px;
-    right: 70px;
-    top: 0;
 
+    width: 10%;
     background: #0066CC;
     border-radius: 20px;
     border: none;
