--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,59 +1,43 @@
 .message {
-    position: absolute;
-    width: 462px;
-    height: 77px;
-    left: 70px;
-    top: 275px;
+    background-color: beige;
+    padding: 20px 0 20px 70px;
 }
 
 .imageAndText {
-    position: absolute;
-    width: 462px;
-    height: 77px;
-    left: 0px;
-    top: 0px;
+    display: flex;
 }
 
 .imageAndText img {
-    position: absolute;
     width: 48px;
-    height: 48px;
-    left: 0px;
-    top: 12px;
+    margin: 10px 10px 0 10px;
 }
 
 .text {
-    position: absolute;
-    width: 414px;
-    height: 60px;
-    left: 60px;
-    top: 0px;
+    border: 1px solid black;
+    width: 41%;
+    display: flex;
+    justify-content: flex-start;
     border-radius: 20px;
-
+    padding: 10px;
     background: #F5F7FB;
     box-shadow: 0px 5px 20px rgba(29, 33, 38, 0.03), 0px 1px 2px rgba(29, 33, 38, 0.1);
 }
 
-.text:after {
+.text:before {
     content: "";
     width: 0px;
     height: 0px;
-    position: absolute;
-    top: 40px;
-    left: -4%;
+    position: relative;
+    top: 28px;
+    left: -27px;
     border-left: 16px solid transparent;
     border-right: 16px solid transparent;
     border-bottom: 20px solid #F5F7FB;
     box-shadow: 0px 1px 0px rgba(29, 33, 38, 0.1);
 }
-
+/*#F5F7FB*/
 .name {
-    position: absolute;
-    width: 35px;
-    height: 20px;
-    left: 12px;
-    top: 8px;
-
+    align-self: flex-start;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 600;
@@ -65,34 +49,23 @@
 }
 
 .messageText {
-    position: absolute;
-    width: 374px;
-    height: 20px;
-    right: 13px;
-    bottom: 8px;
-
+    align-self: flex-end;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 20px;
 
-
     color: #000000;
 }
 
 .time {
-    position: absolute;
-    width: 29px;
-    height: 12px;
-    left: 10px;
-    top: 65px;
 
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 600;
     font-size: 10px;
     line-height: 12px;
-
     color: #000000;
+    padding: 5px 0 5px 20px;
 }
