--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -1,10 +1,12 @@
 .App {
-    --header_height: 60px;
-    position: absolute;
-    width: 1280px;
-    height: 100%;
-    left: 0px;
-    top: 0px;
+    /*--header_height: 60px;*/
+    /*position: absolute;*/
+    /*max-width: 1280px;*/
+    /*height: 100%;*/
+    /*margin: 0 auto;*/
+    /*left: 0px;*/
+    /*top: 0px;*/
+    /*padding: 20px;*/
 }
 
 #hw1 {
