--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -1,19 +1,34 @@
 .button {
+    margin: 0 20px 0 0;
+    padding: 10px 30px;
+
+    border: 1px solid #0066CC;
+    border-radius: 5px;
+
+    font-family: 'Montserrat';
+    font-weight: 600;
+    font-size: 14px;
 }
 
 .disabled {
+
 }
 
 .secondary {
+    background-color: white;
+    color: #0066CC;
 }
 
 .default {
+    background-color: #0066CC;
+    color: white;
 }
 
 .red {
 }
 
 .default:hover {
+
 }
 
 .red:hover {
