--- a/src/s2-homeworks/hw11/HW11.module.css
+++ b/src/s2-homeworks/hw11/HW11.module.css
@@ -2,7 +2,16 @@
 }
 
 .wrapper {
+    display: flex;
+    padding-bottom: 20px;
+    align-items: center;
 }
 
 .number {
+    display: block;
+    width: 3%;
+    height: 100%;
+    text-align: center;
+    font-weight: bolder;
+    margin: 0 10px 0 10px;
 }
