--- a/src/s2-homeworks/hw13/HW13.module.css
+++ b/src/s2-homeworks/hw13/HW13.module.css
@@ -2,6 +2,9 @@
 }
 
 .responseContainer {
+    padding: 70px 0px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .imageContainer {
@@ -11,12 +14,21 @@
 }
 
 .textContainer{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .code {
+    font-size: 40px;
+    font-weight: bolder;
+    margin-bottom: 20px;
 }
 
 .text {
+    font-size: 20px;
 }
 .info {
+    font-size: 20px;
 }
